--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,15 @@
 body {
     margin: 0;
 }
+
+#modalOpen{
+    z-index: 1;
+    position: fixed;
+    top: 0;
+    left: 0;
+    opacity: 0.2;
+    width: 100vw;
+    height: 100vh;
+    
+    background-color: gray;
+}
