--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,4 +3,35 @@
     width: auto;
     border: 3px solid black;
     background-color: #A39072;
+    display: flex;
+    justify-content: space-between;
+}
+
+.homeBtnContainer {
+    align-self: center;
+    margin: 20px;
+}
+
+.homeBtn{
+    width: 30px;
+    height: 30px;
+    align-self: center;
+}
+
+.accountBtn {
+    align-content: center;
+    display: flex;
+    margin: 20px;
+}
+
+.accountBtnContent{
+    align-self: center;
+    padding: 10px;
+    text-decoration: none;
+    color: white;
+}
+
+.accountBtnContent:hover{
+    cursor: pointer;
+    color: #7285a3;
 }
