--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,6 +1,5 @@
 .headerContainer {
     height: 100px;
     width: auto;
-    border: 3px solid black;
-    background-color: #A39072;
+    background-color: #292929;
 }
