--- a/src/components/Post/CommentComp.module.css
+++ b/src/components/Post/CommentComp.module.css
@@ -23,7 +23,7 @@
   width: 800px;
   height: 500px;
   background-color: #3500d3;
-  color: w;
+  color: #fff;
   border: 2px solid black;
   border-radius: 5px;
 }
